add desktop landing page

--- a/_includes/home-hero.html
+++ b/_includes/home-hero.html
@@ -17,7 +17,7 @@
                        </a>
                     </div>
                   </div>
-                  <p class="uk-padding uk-padding-remove-horizontal uk-text-lead uk-text-left@m uk-text-center@s">Direct download available for <a href="https://github.com/BlueWallet/BlueWallet/releases" target="_blank">android</a> and <a href="https://github.com/BlueWallet/BlueWallet/releases" target="_blank">Desktop</a></p>
+                  <p class="uk-padding uk-padding-remove-horizontal uk-text-lead uk-text-left@m uk-text-center@s">Direct download available for <a href="https://github.com/BlueWallet/BlueWallet/releases" target="_blank">android</a> and <a href="{{ site.baseurl }}/desktop-bitcoin-wallet">Desktop</a></p>
               </div>
             </div>
           </div>
