--- a/_includes/multisig-wallet.html
+++ b/_includes/multisig-wallet.html
@@ -15,7 +15,7 @@
             <div>
                 <div class="uk-card uk-card-default uk-box-shadow-medium uk-card-hover uk-card-body uk-inline border-radius-medium border-light">
                     <h3 class="uk-card-title uk-margin">Easy Creation</h3>
-                    <p>Total flexibility to choose the number os keys and address types.</p>
+                    <p>Total flexibility to choose the number of keys and address types.</p>
                 </div>
             </div>
             <div>
