--- a/_layouts/doc-home.html
+++ b/_layouts/doc-home.html
@@ -2,4 +2,20 @@
 layout: default
 ---
 
+{% if page.width == 'expand' %}
+    {{ content }}
+{% else %}
+<div class="uk-section">
+    <div class="uk-container{% if page.width %} uk-container-{{page.width}}{% endif %}">
 
+        <article class="uk-article">
+
+            <div class="article-content link-primary">
+                {{ content }}
+            </div>
+
+        </article>
+
+    </div>
+</div>
+{% endif %}
