--- a/_includes/about.html
+++ b/_includes/about.html
@@ -18,7 +18,7 @@
                 <div class="uk-card uk-card-hover uk-card-body border-radius-medium people">
                   <a href="https://twitter.com/overtorment" target="_blank">                    
                     <img class="uk-width-small" src="{{ site.uploads | absolute_url }}igor.png">
-                    <h3 class="uk-card-title uk-margin">Igor Korsakov</h3>
+                    <h3 class="uk-card-title uk-margin">Igor</h3>
                     <ul class="uk-list">
                       <li>London/Engineering</li>
                     </ul>
@@ -29,7 +29,7 @@
                 <div class="uk-card uk-card-hover uk-card-body border-radius-medium people">
                   <a href="https://twitter.com/nvcoelho" target="_blank"> 
                     <img class="uk-width-small" src="{{ site.uploads | absolute_url }}nuno.png">
-                    <h3 class="uk-card-title uk-margin">Nuno Coelho</h3>
+                    <h3 class="uk-card-title uk-margin">Nuno</h3>
                     <ul class="uk-list">
                       <li>Barcelona/Product & UX</li>
                     </ul>
@@ -40,7 +40,7 @@
                 <div class="uk-card uk-card-hover uk-card-body border-radius-medium people">
                   <a href="https://twitter.com/marcosrdz" target="_blank"> 
                     <img class="uk-width-small" src="{{ site.uploads | absolute_url }}marcos.png">
-                    <h3 class="uk-card-title uk-margin">Marcos Rodriguez</h3>
+                    <h3 class="uk-card-title uk-margin">Marcos</h3>
                     <ul class="uk-list">
                       <li>Miami/Engineering</li>
                     </ul>
