improve mobile support section

--- a/_includes/search.html
+++ b/_includes/search.html
@@ -1,6 +1,6 @@
 <div class="uk-section section-hero uk-position-relative" data-uk-scrollspy="cls: uk-animation-slide-bottom-medium; repeat: true">
     <div class="uk-container uk-container-small">
-        <h1 class="uk-heading-primary uk-text-center uk-margin-remove-top">Can we help? 👇</h1>
+        <h1 class="uk-heading-hero uk-text-center uk-margin-remove-top">Can we help? 👇</h1>
             <div class="hero-search">
 
                     <!-- Html Elements for Search -->
