--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,45 +9,8 @@
 <div class="uk-section">
 <div class="uk-container">
   <h2 class="uk-h2">Who are we</h2>
-    <p class="uk-text-lead">We are a collective of developers and designers focused on bringing tools to self-sovereignity, personal property security and privacy.</p><br />
+    <p class="uk-text-lead">We are a collective of developers and designers focused on bringing tools to self-sovereignity, personal property, security and privacy.</p><br />
       <p class="uk-text-lead">Reach out, we will appreciate your feedback.</p>
-
-
-      <div class="uk-child-width-1-3@m uk-grid-match uk-text-center uk-margin-medium-top uk-grid-small" data-uk-grid>
-            <div>
-                <div class="uk-card uk-card-hover uk-card-body border-radius-medium people">
-                  <a href="https://twitter.com/overtorment" target="_blank">                    
-                    <img class="uk-width-small" src="{{ site.uploads | absolute_url }}igor.png">
-                    <h3 class="uk-card-title uk-margin">Igor</h3>
-                    <ul class="uk-list">
-                      <li>London/Engineering</li>
-                    </ul>
-                  </a>
-                </div>
-            </div>
-            <div>
-                <div class="uk-card uk-card-hover uk-card-body border-radius-medium people">
-                  <a href="https://twitter.com/nvcoelho" target="_blank"> 
-                    <img class="uk-width-small" src="{{ site.uploads | absolute_url }}nuno.png">
-                    <h3 class="uk-card-title uk-margin">Nuno</h3>
-                    <ul class="uk-list">
-                      <li>Barcelona/Product & UX</li>
-                    </ul>
-                  </a>
-                </div>
-            </div>
-            <div>
-                <div class="uk-card uk-card-hover uk-card-body border-radius-medium people">
-                  <a href="https://twitter.com/marcosrdz" target="_blank"> 
-                    <img class="uk-width-small" src="{{ site.uploads | absolute_url }}marcos.png">
-                    <h3 class="uk-card-title uk-margin">Marcos</h3>
-                    <ul class="uk-list">
-                      <li>Miami/Engineering</li>
-                    </ul>
-                  </a>
-                </div>
-            </div>
-      </div>
   </div>
 </div>
 <div class="uk-section">
