fix: Correct Lightning spelling

--- a/_includes/lightning.html
+++ b/_includes/lightning.html
@@ -75,7 +75,7 @@
                 <div class="uk-card uk-card-hover uk-card-body border-radius-medium">
                     <span class="uk-badge">3</span>
                     <h3 class="uk-card-title uk-margin">Start using Lightning</h3>
-                    <p>Once you send your transaction, it will <strong>require 3 confirmations</strong> before your balance appears on your Lightning wallet. Welcome to Lighting.</p>
+                    <p>Once you send your transaction, it will <strong>require 3 confirmations</strong> before your balance appears on your Lightning wallet. Welcome to Lightning.</p>
                 </div>
             </div>
       </div>
