--- a/_includes/lightning.html
+++ b/_includes/lightning.html
@@ -61,7 +61,7 @@
                 <div class="uk-card uk-card-hover uk-card-body border-radius-medium">
                     <span class="uk-badge">1</span>
                     <h3 class="uk-card-title uk-margin">Create a Lightning Wallet</h3>
-                    <p>Once you have created your Lightning Wallet, you will find the option <strong>"manage funds"</strong> inside your wallet. This is where you can refill new Wallet.</p>
+                    <p>Once you have created your Lightning Wallet, you will find the option <strong>"manage funds"</strong> inside your wallet. This is where you can refill a new Wallet.</p>
                 </div>
             </div>
             <div>
@@ -75,7 +75,7 @@
                 <div class="uk-card uk-card-hover uk-card-body border-radius-medium">
                     <span class="uk-badge">3</span>
                     <h3 class="uk-card-title uk-margin">Start using Lightning</h3>
-                    <p>Once you send your transaction, it will <strong>require 3 confirmations</strong> before your balance appears on your Lightning wallet. Welcome to Lighting.</p>
+                    <p>Once you send your transaction, it will <strong>require 3 confirmations</strong> before your balance appears on your Lightning wallet. Welcome to Lightning.</p>
                 </div>
             </div>
       </div>
