Patch typo adresses to addresses

--- a/_includes/watch-only.html
+++ b/_includes/watch-only.html
@@ -27,7 +27,7 @@
             <div>
                 <div class="uk-card uk-card-default uk-box-shadow-medium uk-card-hover uk-card-body uk-inline border-radius-medium border-light">
                     <h3 class="uk-card-title uk-margin">Receive</h3>
-                    <p>Generate adresses and QR codes for receiving.</p>
+                    <p>Generate addresses and QR codes for receiving.</p>
                 </div>
             </div>
             <div>
