--- a/_includes/newsletter.html
+++ b/_includes/newsletter.html
@@ -6,7 +6,7 @@
         <div class="uk-child-width-expand@s" uk-grid>
             <div>
                 <div class="newsletter uk-box-shadow-medium uk-card-hover border-radius-medium">
-                    <form action="https://bluewallet.us17.list-manage.com/subscribe/post-json?u=6733da37320f82a3dbe84a9cc&amp;id=2474ce3b66&c=?" method="get" id="mc-embedded-subscribe-form" name="newslettermail" class="validate">
+                    <form action="" method="get" id="mc-embedded-subscribe-form" name="newslettermail" class="validate">
                         <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="your email here..." required>
                         <div style="position: absolute; left: -5000px;" aria-hidden="true">
                             <input type="text" name="b_e44c1f194bec93e238615469e_f6f826e769" tabindex="-1" value="">
