--- a/_includes/features.html
+++ b/_includes/features.html
@@ -71,7 +71,7 @@ Recommended for cold storage and large amounts.</p>
                   <img src="{{ site.uploads | absolute_url }}/features/lightning.png" alt="lightning wallet">
                </div>
                <h2 class="uk-h3 uk-margin">Lightning Wallets</h2>
-               <p class="uk-text-meta">You can use a hosted Lightning wallet such as <a href="https://guides.getalby.com/user-guide/v/alby-account-and-browser-extension/alby-lightning-account/connect-to-other-apps/mobile-apps/bluewallet" target="_blank">Alby</a> or connect to your own node.</p>
+               <p class="uk-text-meta">You can import your own node or a hosted Lightning wallet.</p>
             </div>
          </div>
         <div>
